--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,6 @@
  * via http://info.meteor.com/blog/set-up-sublime-text-for-meteor-es6-es2015-and-jsx-syntax-and-linting
  */
 
-
 {
   "parser": "babel-eslint",
   "env": {
@@ -153,15 +152,15 @@
     "no-multiple-empty-lines": [2, { // http://eslint.org/docs/rules/no-multiple-empty-lines
       "max": 2
     }],
-    "no-nested-ternary": 2,          // http://eslint.org/docs/rules/no-nested-ternary
-    "no-new-object": 2,              // http://eslint.org/docs/rules/no-new-object
-    "no-array-constructor": 2,       // http://eslint.org/docs/rules/no-array-constructor
-    "no-spaced-func": 2,             // http://eslint.org/docs/rules/no-spaced-func
-    "no-trailing-spaces": 2,         // http://eslint.org/docs/rules/no-trailing-spaces
-    "no-extra-parens": 2,               // http://eslint.org/docs/rules/no-wrap-func
-    "no-underscore-dangle": 0,       // http://eslint.org/docs/rules/no-underscore-dangle
-    "one-var": [2, "never"],         // http://eslint.org/docs/rules/one-var
-    "padded-blocks": [2, "never"],   // http://eslint.org/docs/rules/padded-blocks
+    "no-nested-ternary": 2,                 // http://eslint.org/docs/rules/no-nested-ternary
+    "no-new-object": 2,                     // http://eslint.org/docs/rules/no-new-object
+    "no-array-constructor": 2,              // http://eslint.org/docs/rules/no-array-constructor
+    "no-spaced-func": 2,                    // http://eslint.org/docs/rules/no-spaced-func
+    "no-trailing-spaces": 2,                // http://eslint.org/docs/rules/no-trailing-spaces
+    "no-extra-parens": [2, "functions"],    // http://eslint.org/docs/rules/no-wrap-func
+    "no-underscore-dangle": 0,              // http://eslint.org/docs/rules/no-underscore-dangle
+    "one-var": [2, "never"],                // http://eslint.org/docs/rules/one-var
+    "padded-blocks": [2, "never"],          // http://eslint.org/docs/rules/padded-blocks
     "semi": [2, "always"],           // http://eslint.org/docs/rules/semi
     "semi-spacing": [2, {            // http://eslint.org/docs/rules/semi-spacing
       "before": false,
@@ -172,10 +171,53 @@
     "space-before-function-paren": [2, "never"], // http://eslint.org/docs/rules/space-before-function-paren
     "space-infix-ops": 2,            // http://eslint.org/docs/rules/space-infix-ops
     "space-return-throw-case": 2,    // http://eslint.org/docs/rules/space-return-throw-case
-    "spaced-comment": 2,        // http://eslint.org/docs/rules/spaced-line-comment
-
-    "no-undef": 0, 									// http://info.meteor.com/blog/set-up-sublime-text-for-meteor-es6-es2015-and-jsx-syntax-and-linting
-
-
+    "spaced-comment": 2,             // http://eslint.org/docs/rules/spaced-line-comment
+    "no-undef": 0, 									  // http://info.meteor.com/blog/set-up-sublime-text-for-meteor-es6-es2015-and-jsx-syntax-and-linting
+# /**
+#  * React
+#  */
+#     "react/display-name": 1,
+#     "react/forbid-prop-types": 1,
+#     "react/jsx-boolean-value": 1,
+#     "react/jsx-closing-bracket-location": 1,
+#     "react/jsx-curly-spacing": 1,
+#     "react/jsx-equals-spacing": 1,
+#     "react/jsx-handler-names": 1,
+#     "react/jsx-indent-props": 1,
+#     "react/jsx-indent": 1,
+#     "react/jsx-key": 1,
+#     "react/jsx-max-props-per-line": 1,
+#     "react/jsx-no-bind": 1,
+#     "react/jsx-no-duplicate-props": 1,
+#     "react/jsx-no-literals": 1,
+#     "react/jsx-no-undef": 1,
+#     "react/jsx-pascal-case": 1,
+#     "react/jsx-quotes": 1,
+#     "react/jsx-sort-prop-types": 1,
+#     "react/jsx-sort-props": 1,
+#     "react/jsx-uses-react": 1,
+#     "react/jsx-uses-vars": 0,
+#     "react/no-danger": 1,
+#     "react/no-deprecated": 1,
+#     "react/no-did-mount-set-state": 1,
+#     "react/no-did-update-set-state": 1,
+#     "react/no-direct-mutation-state": 1,
+#     "react/no-is-mounted": 1,
+#     "react/no-multi-comp": 1,
+#     "react/no-set-state": 1,
+#     "react/no-string-refs": 1,
+#     "react/no-unknown-property": 1,
+#     "react/prefer-es6-class": 1,
+#     "react/prop-types": 1,
+#     "react/react-in-jsx-scope": 1,
+#     "react/require-extension": 1,
+#     "react/self-closing-comp": 1,
+#     "react/sort-comp": 1,
+#     "react/wrap-multilines": 1,
+  },
+  {
+    "plugins": [
+      "react"
+    ]
   }
 }
